connecting to elasticsearch, creating index

--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,4 @@ package: .
 import:
 - package: github.com/codegangsta/cli
 - package: github.com/Sirupsen/logrus
+- package: gopkg.in/olivere/elastic.v3
